--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,10 @@ spring:
     url: jdbc:mariadb://localhost:3306/board
     username: root
     password: 1234
-    jpa:
-      database: mysql
-      database-platform: org.hibernate.dialect.MariaDBDialect
-      generate-ddl: true
-      hibernate:
-        ddl-auto: update
-      show-sql: true
+  jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MariaDBDialect
+    generate-ddl: true
+    hibernate:
+    ddl-auto: create
+    show-sql: true
