--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,7 @@
-#spring.application.name=board
-server:
-  port:8080
-
+#스프링은 실행시 무조건 application.yml 파일을 찾음
 spring:
-  datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/board
-    username: root
-    password: 1234
-  jpa:
-    database: mysql
-    database-platform: org.hibernate.dialect.MariaDBDialect
-    generate-ddl: true
-    hibernate:
-    ddl-auto: create
-    show-sql: true
+  profiles:
+    #    아래와 같이 active설정을 통해 local이라는 이름의 profiles를 가진 yml을 찾음
+    active: prod
+
+
