--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -21,4 +21,7 @@ spring:
     show_sql: true
 logging:
   level:
-    root: debug
+    root: info
+#    별도의 에러로그 분류없이, 날짜구분없이 모든로그를 남기는 설정
+  file:
+    name: logs/app.log
